--- a/SuperRide.csproj
+++ b/SuperRide.csproj
@@ -62,6 +62,8 @@
     <Content Include="assets\audio\engine.ogg" />
     <Content Include="assets\audio\thunder.ogg" />
     <Content Include="assets\audio\yay.ogg" />
+    <Content Include="assets\images\instructions.png" />
+    <Content Include="assets\images\instructionsLogo.png" />
     <Content Include="assets\images\playButton.png" />
     <Content Include="assets\images\tryAgainButton.png" />
     <Content Include="packages.config" />
@@ -105,6 +107,7 @@
     <TypeScriptCompile Include="Scripts\objects\scoreboard.ts" />
     <TypeScriptCompile Include="Scripts\states\gameover.ts" />
     <TypeScriptCompile Include="Scripts\states\gameplay.ts" />
+    <TypeScriptCompile Include="Scripts\states\instructions.ts" />
     <TypeScriptCompile Include="Scripts\states\menu.ts" />
     <TypeScriptCompile Include="Scripts\typings\createjs-lib\createjs-lib.d.ts" />
     <TypeScriptCompile Include="Scripts\typings\easeljs\easeljs.d.ts" />
